--- a/manifest.json
+++ b/manifest.json
@@ -4,18 +4,25 @@
   "manifest_version": 3,
   "description": "VKPL Theatre mode in a window",
   "action": {
-    "default_icon": "vkpl.png",
-    "default_title": "Open menu",
-    "default_popup": "extension.html"
+    "default_icon": "vkpl-off.png",
+    "default_title": "VKPL Theatre mode"
   },
   "content_scripts": [{
       "matches": ["https://vkplay.live/*"],
-      "js": ["worker.js"]
+      "run_at": "document_start",
+      "js": ["background.js"]
   }],
   "permissions": [
     "activeTab",
     "tabs",
     "storage",
     "scripting"
-  ]
+  ],
+  "host_permissions": [
+    "https://vkplay.live/*"
+  ],
+  "background": {
+    "service_worker": "worker.js",
+    "type": "module"
+  }
 }
